fix: Incorrect default font, gaps

--- a/src/index.css
+++ b/src/index.css
@@ -541,6 +541,10 @@ video {
   height: auto;
 }
 
+body {
+  font-family: "OpenSans", sans-serif;
+}
+
 button:focus {
   outline: none;
 }
